<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>razor_imu_ros2</name>
  <version>1.0.0</version>
  <description>ROS2 Razor IMU Driver</description>
  <maintainer email="haoru.xue@autoware.org">Haoru Xue</maintainer>
  <license>Apache2.0</license>

  <depend>ament_cmake_auto</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>serial_driver</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
